--- a/basic_tensorflow.ipynb
+++ b/basic_tensorflow.ipynb
@@ -39,12 +39,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SESSION"
+    "# Defining Tensors"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "m1 = [[1.0, 2.0], \n",
+    "      [3.0, 4.0]]\n",
+    "m2 = np.array([[1.0, 2.0],\n",
+    "              [3.0, 4.0]], dtype=np.float32)\n",
+    "m3 = tf.constant([[1.0, 2.0],\n",
+    "                 [3.0, 4.0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'tensorflow.python.framework.ops.Tensor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(m1))\n",
+    "print(type(m2))\n",
+    "print(type(m3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t1 = tf.convert_to_tensor(m1, dtype=tf.float32)\n",
+    "t2 = tf.convert_to_tensor(m2, dtype=tf.float32)\n",
+    "t3 = tf.convert_to_tensor(m3, dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tensorflow.python.framework.ops.Tensor'>\n",
+      "<class 'tensorflow.python.framework.ops.Tensor'>\n",
+      "<class 'tensorflow.python.framework.ops.Tensor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(t1))\n",
+    "print(type(t2))\n",
+    "print(type(t3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +165,7 @@
       "TYPE IS\n",
       " <class 'tensorflow.python.framework.ops.Tensor'>\n",
       "VALUE IS\n",
-      " Tensor(\"Const:0\", shape=(), dtype=string)\n"
+      " Tensor(\"Const_3:0\", shape=(), dtype=string)\n"
      ]
     }
    ],
@@ -104,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -146,11 +228,11 @@
       "TYPE IS\n",
       " <class 'tensorflow.python.framework.ops.Tensor'>\n",
       "VALUE IS\n",
-      " Tensor(\"Const_1:0\", shape=(), dtype=float32)\n",
+      " Tensor(\"Const_4:0\", shape=(), dtype=float32)\n",
       "TYPE IS\n",
       " <class 'tensorflow.python.framework.ops.Tensor'>\n",
       "VALUE IS\n",
-      " Tensor(\"Const_2:0\", shape=(), dtype=float32)\n"
+      " Tensor(\"Const_5:0\", shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -163,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -319,7 +401,7 @@
       "\u001b[0;31mFailedPreconditionError\u001b[0m: Attempting to use uninitialized value Variable\n\t [[Node: Variable/_8 = _Send[T=DT_FLOAT, client_terminated=false, recv_device=\"/job:localhost/replica:0/task:0/cpu:0\", send_device=\"/job:localhost/replica:0/task:0/gpu:0\", send_device_incarnation=1, tensor_name=\"edge_4_Variable\", _device=\"/job:localhost/replica:0/task:0/gpu:0\"](Variable)]]\n\t [[Node: Variable/_9 = _Recv[_start_time=0, client_terminated=false, recv_device=\"/job:localhost/replica:0/task:0/cpu:0\", send_device=\"/job:localhost/replica:0/task:0/gpu:0\", send_device_incarnation=1, tensor_name=\"edge_4_Variable\", tensor_type=DT_FLOAT, _device=\"/job:localhost/replica:0/task:0/cpu:0\"]()]]",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mFailedPreconditionError\u001b[0m                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e453db2b7ada>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mweight_out\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint_tf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight_out\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-e453db2b7ada>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mweight_out\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint_tf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight_out\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;32mC:\\Users\\jwlee\\Anaconda3\\envs\\tensorflow35\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    787\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 789\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    790\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;32mC:\\Users\\jwlee\\Anaconda3\\envs\\tensorflow35\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    995\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    996\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 997\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    998\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    999\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;32mC:\\Users\\jwlee\\Anaconda3\\envs\\tensorflow35\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1130\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1131\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1132\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1133\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1134\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
@@ -342,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -370,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -382,11 +464,11 @@
       "TYPE IS\n",
       " <class 'numpy.ndarray'>\n",
       "VALUE IS\n",
-      " [[-0.04009334 -0.08928627]\n",
-      " [ 0.050444   -0.04482851]\n",
-      " [-0.00832313 -0.00158682]\n",
-      " [-0.05207636 -0.12698632]\n",
-      " [-0.02693278 -0.06933945]]\n"
+      " [[ 0.00813493  0.16322781]\n",
+      " [-0.07509127  0.01595697]\n",
+      " [-0.07316905 -0.02729499]\n",
+      " [-0.10284281 -0.00276054]\n",
+      " [-0.04249415  0.0470983 ]]\n"
      ]
     }
    ],
@@ -404,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -457,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -469,7 +551,7 @@
       "TYPE IS\n",
       " <class 'numpy.ndarray'>\n",
       "VALUE IS\n",
-      " [[-0.07444236 -0.23661403]]\n"
+      " [[-0.13978612  0.04058734]]\n"
      ]
     }
    ],
@@ -481,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -493,8 +575,8 @@
       "TYPE IS\n",
       " <class 'numpy.ndarray'>\n",
       "VALUE IS\n",
-      " [[-0.04113678 -0.15513276]\n",
-      " [-0.02152511 -0.08942104]]\n"
+      " [[-0.12024556  0.14268856]\n",
+      " [-0.14612302  0.02197018]]\n"
      ]
     }
    ],
@@ -506,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
