--- a/cnn_customdata_basic.ipynb
+++ b/cnn_customdata_basic.ipynb
@@ -9,11 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Packages loaded\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -32,11 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['use_gray', 'trainimg', 'testlabel', 'testimg', 'imgsize', 'trainlabel']\n",
+      "1015 train images loaded\n",
+      "254 test images loaded\n",
+      "12288 dimensional input\n",
+      "Image size is [64 64]\n",
+      "2 classes\n"
+     ]
+    }
+   ],
    "source": [
     "# Load them!\n",
     "cwd = os.getcwd()\n",
@@ -73,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -108,11 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NETWORK READY\n"
+     ]
+    }
+   ],
    "source": [
     "def conv_basic(_input, _w, _b, _keepratio, _use_gray):\n",
     "    # INPUT\n",
@@ -160,11 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUNCTIONS READY\n"
+     ]
+    }
+   ],
    "source": [
     "# tf Graph input\n",
     "x = tf.placeholder(tf.float32, [None, n_input])\n",
@@ -194,12 +231,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 000/050 cost: 15.858259895\n",
+      " Training accuracy: 0.500\n",
+      " Test accuracy: 0.516\n",
+      "Epoch: 010/050 cost: 2.749643608\n",
+      " Training accuracy: 0.750\n",
+      " Test accuracy: 0.772\n",
+      "Epoch: 020/050 cost: 2.412448558\n",
+      " Training accuracy: 0.830\n",
+      " Test accuracy: 0.815\n",
+      "Epoch: 030/050 cost: 2.291305932\n",
+      " Training accuracy: 0.810\n",
+      " Test accuracy: 0.874\n",
+      "Epoch: 040/050 cost: 2.054078037\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.898\n",
+      "Epoch: 049/050 cost: 1.901441151\n",
+      " Training accuracy: 0.950\n",
+      " Test accuracy: 0.925\n",
+      "Optimization Finished!\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "training_epochs = 50\n",
@@ -250,11 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session closed.\n"
+     ]
+    }
+   ],
    "source": [
     "sess.close()\n",
     "print (\"Session closed.\")"
